finishing translation, needs to solve dark mode flash

--- a/static/styles.css
+++ b/static/styles.css
@@ -4,8 +4,6 @@
 
 html {
 	font-family: "Inter", sans-serif;
-	background-color: theme("colors.kayozen.light.background");
-	color: theme("colors.kayozen.light.text");
 }
 
 html.dark {
